--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.65
-  maximum: 7.28
-  average: 6.88
-  UpdateDay: '2022-05-10T03:31:59.775467'
+  minimum: 6.82
+  maximum: 9.37
+  average: 7.91
+  UpdateDay: '2022-05-10T06:30:26.365315'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 44605
+  Rank: 44701
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,41 +55,41 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 14.48
-  maximum: 29.12
-  average: 20.02
-  UpdateDay: '2022-05-10T03:30:25.898398'
+  minimum: 9.46
+  maximum: 29.55
+  average: 17.73
+  UpdateDay: '2022-05-10T06:30:26.386939'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 41199
+  Rank: 41300
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 50004
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.48
-  maximum: 22.57
-  average: 14.2
-  UpdateDay: '2022-05-10T03:30:25.898923'
+  minimum: 9.16
+  maximum: 11.65
+  average: 10.13
+  UpdateDay: '2022-05-10T06:32:00.420709'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 36438
+  Rank: 36540
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 1443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 62.49
-  maximum: 86.27
-  average: 71.21
-  UpdateDay: '2022-05-10T03:30:44.000244'
+  minimum: 59.99
+  maximum: 60.16
+  average: 60.06
+  UpdateDay: '2022-05-10T06:32:00.839475'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 29886
+  Rank: 29988
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -99,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.96
-  maximum: 48.17
-  average: 35.59
-  UpdateDay: '2022-05-10T03:31:59.868147'
+  minimum: 10.32
+  maximum: 53.37
+  average: 35.21
+  UpdateDay: '2022-05-10T06:32:00.743161'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 29327
+  Rank: 29424
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 26474
+  Rank: 26574
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -127,12 +127,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 11.62
-  maximum: 40.04
-  average: 29.24
-  UpdateDay: '2022-05-10T03:30:25.933620'
+  minimum: 47.63
+  maximum: 359.2
+  average: 158.02
+  UpdateDay: '2022-05-10T06:30:26.852819'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 26416
+  Rank: 26507
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -142,42 +142,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 47.93
-  maximum: 53.11
-  average: 50.37
-  UpdateDay: '2022-05-10T03:32:00.007885'
+  minimum: 52.83
+  maximum: 53.89
+  average: 53.43
+  UpdateDay: '2022-05-10T06:32:00.822195'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 23891
+  Rank: 23993
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 73.82
-  maximum: 87.14
-  average: 82.23
-  UpdateDay: '2022-05-10T03:32:00.348198'
+  minimum: 74.79
+  maximum: 87.3
+  average: 82.85
+  UpdateDay: '2022-05-10T06:32:00.932175'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 20907
+  Rank: 20957
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.97
-  maximum: 44.97
-  average: 43.42
-  UpdateDay: '2022-05-10T03:31:59.971464'
+  minimum: 41.81
+  maximum: 47.33
+  average: 44.57
+  UpdateDay: '2022-05-10T06:30:30.002162'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 20049
+  Rank: 20145
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -192,7 +192,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 18840
+  Rank: 18915
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -204,22 +204,22 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 18704
+  Rank: 18799
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.45
-  maximum: 50.61
-  average: 45.31
-  UpdateDay: '2022-05-10T03:32:00.507038'
+  minimum: 121.74
+  maximum: 1132.17
+  average: 458.85
+  UpdateDay: '2022-05-10T06:31:25.347615'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 18250
+  Rank: 18336
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 17219
+  Rank: 17304
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -246,7 +246,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 16640
+  Rank: 16740
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -256,12 +256,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.95
-  maximum: 50.18
-  average: 46.38
-  UpdateDay: '2022-05-10T03:31:59.900235'
+  minimum: 38.91
+  maximum: 49.59
+  average: 42.87
+  UpdateDay: '2022-05-10T06:32:00.768550'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 15582
+  Rank: 15630
 - alterId: 0
   cipher: auto
   http-opts:
@@ -286,22 +286,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 14863
+  Rank: 14913
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
-  password: 23115_5a451f03
+  country: "\U0001F1EF\U0001F1F5 JP"
+  password: 82a115db-6e59-4319-9730-8f5638908d59YWVzLTI1Ni1nY2023115_5a451f03
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.6
-  maximum: 43.44
-  average: 42.38
-  UpdateDay: '2022-05-10T03:32:00.518727'
+  minimum: 41.59
+  maximum: 53.66
+  average: 45.63
+  UpdateDay: '2022-05-10T06:32:00.798461'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 13825
+  Rank: 13924
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -316,22 +316,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 13788
-- name: ssl.tcpbbr.net:443@trojan
-  server: ssl.tcpbbr.net
+  Rank: 13873
+- name: api.tcpbbr.net:443@trojan
+  server: api.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.49
-  maximum: 40.71
-  average: 39.9
-  UpdateDay: '2022-05-10T03:31:59.955026'
-  PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 13594
+  minimum: 37.77
+  maximum: 57.58
+  average: 44.67
+  UpdateDay: '2022-05-10T06:32:00.790124'
+  PFirstFoundDay: '2022-03-29T09:34:31.613124'
+  Rank: 13683
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -358,7 +358,7 @@ proxy-groups:
   - 35.153.162.49:27080@vmess
   - tky3.ssgnode.ga:443@trojan
   - zgao.shop:443@trojan
-  - ssl.tcpbbr.net:443@trojan
+  - api.tcpbbr.net:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
