--- a/daili2.yaml
+++ b/daili2.yaml
@@ -46,7 +46,7 @@ proxies:
   average: 7.91
   UpdateDay: '2022-05-10T06:30:26.365315'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 44796
+  Rank: 44891
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -60,7 +60,7 @@ proxies:
   average: 17.73
   UpdateDay: '2022-05-10T06:30:26.386939'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 41400
+  Rank: 41500
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
   port: 50004
@@ -74,7 +74,7 @@ proxies:
   average: 10.13
   UpdateDay: '2022-05-10T06:32:00.420709'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 36640
+  Rank: 36740
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -89,7 +89,7 @@ proxies:
   average: 60.06
   UpdateDay: '2022-05-10T06:32:00.839475'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 30078
+  Rank: 30173
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -104,7 +104,7 @@ proxies:
   average: 35.21
   UpdateDay: '2022-05-10T06:32:00.743161'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 29514
+  Rank: 29604
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,7 +117,7 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 26674
+  Rank: 26774
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
   type: trojan
@@ -132,7 +132,7 @@ proxies:
   average: 158.02
   UpdateDay: '2022-05-10T06:30:26.852819'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 26602
+  Rank: 26702
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -147,7 +147,7 @@ proxies:
   average: 53.43
   UpdateDay: '2022-05-10T06:32:00.822195'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 24093
+  Rank: 24188
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -162,7 +162,7 @@ proxies:
   average: 82.85
   UpdateDay: '2022-05-10T06:32:00.932175'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 21005
+  Rank: 21049
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   type: trojan
@@ -177,7 +177,19 @@ proxies:
   average: 44.57
   UpdateDay: '2022-05-10T06:30:30.002162'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 20240
+  Rank: 20340
+- name: www.ggchk.ga:443@trojan
+  password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
+  port: 443
+  server: www.ggchk.ga
+  type: trojan
+  success_rate: 100.0
+  minimum: 52.3
+  maximum: 63.21
+  average: 56.06
+  UpdateDay: '2022-04-03T15:12:54.456600'
+  PFirstFoundDay: '2022-03-11T21:04:39.779731'
+  Rank: 18999
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -192,19 +204,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 18965
-- name: www.ggchk.ga:443@trojan
-  password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
-  port: 443
-  server: www.ggchk.ga
-  type: trojan
-  success_rate: 100.0
-  minimum: 52.3
-  maximum: 63.21
-  average: 56.06
-  UpdateDay: '2022-04-03T15:12:54.456600'
-  PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 18899
+  Rank: 18990
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   type: trojan
@@ -219,7 +219,7 @@ proxies:
   average: 458.85
   UpdateDay: '2022-05-10T06:31:25.347615'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 18412
+  Rank: 18459
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 17372
+  Rank: 17429
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -246,7 +246,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 16840
+  Rank: 16940
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
@@ -261,7 +261,7 @@ proxies:
   average: 42.87
   UpdateDay: '2022-05-10T06:32:00.768550'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 15678
+  Rank: 15706
 - alterId: 0
   cipher: auto
   http-opts:
@@ -286,7 +286,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 14963
+  Rank: 15013
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
@@ -301,7 +301,7 @@ proxies:
   average: 45.63
   UpdateDay: '2022-05-10T06:32:00.798461'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 14019
+  Rank: 14119
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -316,22 +316,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 13958
-- name: api.tcpbbr.net:443@trojan
-  server: api.tcpbbr.net
+  Rank: 14028
+- name: ssl.tcpbbr.net:443@trojan
+  server: ssl.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 283695dc-fcc8-11ea-8684-f23c913c8d2b
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.77
-  maximum: 57.58
-  average: 44.67
-  UpdateDay: '2022-05-10T06:32:00.790124'
-  PFirstFoundDay: '2022-03-29T09:34:31.613124'
-  Rank: 13769
+  minimum: 39.66
+  maximum: 39.7
+  average: 39.69
+  UpdateDay: '2022-05-10T06:32:00.766154'
+  PFirstFoundDay: '2022-03-27T06:36:10.059372'
+  Rank: 13853
 proxy-groups:
 - name: PG-default
   type: fallback
@@ -349,8 +349,8 @@ proxy-groups:
   - 210.152.13.168:443@trojan
   - 2.58.242.43:443@trojan
   - www.zx07.top:443@trojan
-  - www.gomacau.gq:443@trojan
   - www.ggchk.ga:443@trojan
+  - www.gomacau.gq:443@trojan
   - www.tokyo2023.ga:443@trojan
   - www.seetheworldjp.ga:443@trojan
   - www.tokyo2021.ga:443@trojan
@@ -358,7 +358,7 @@ proxy-groups:
   - 35.153.162.49:27080@vmess
   - tky3.ssgnode.ga:443@trojan
   - zgao.shop:443@trojan
-  - api.tcpbbr.net:443@trojan
+  - ssl.tcpbbr.net:443@trojan
   tolerance: 250
 rules:
 - MATCH,PG-default
