--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 30003
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.82
-  maximum: 9.37
-  average: 7.91
-  UpdateDay: '2022-05-10T06:30:26.365315'
+  minimum: 7.11
+  maximum: 7.4
+  average: 7.3
+  UpdateDay: '2022-05-10T09:32:04.921872'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 44891
+  Rank: 44988
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,26 +55,26 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 9.46
-  maximum: 29.55
-  average: 17.73
-  UpdateDay: '2022-05-10T06:30:26.386939'
+  minimum: 16.7
+  maximum: 58.92
+  average: 34.7
+  UpdateDay: '2022-05-10T09:30:30.575617'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 41500
+  Rank: 41601
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
-  port: 50004
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 50004
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 9.16
-  maximum: 11.65
-  average: 10.13
-  UpdateDay: '2022-05-10T06:32:00.420709'
+  minimum: 9.66
+  maximum: 10.66
+  average: 10.24
+  UpdateDay: '2022-05-10T09:30:30.516745'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 36740
+  Rank: 36841
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
   port: 1443
@@ -84,27 +84,27 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.99
-  maximum: 60.16
-  average: 60.06
-  UpdateDay: '2022-05-10T06:32:00.839475'
+  minimum: 59.66
+  maximum: 60.87
+  average: 60.07
+  UpdateDay: '2022-05-10T09:32:05.177716'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 30173
+  Rank: 30255
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  port: 21089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 21089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 10.32
-  maximum: 53.37
-  average: 35.21
-  UpdateDay: '2022-05-10T06:32:00.743161'
+  minimum: 10.22
+  maximum: 45.66
+  average: 28.04
+  UpdateDay: '2022-05-10T09:30:30.569001'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 29604
+  Rank: 29700
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,67 +117,67 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 26774
+  Rank: 26869
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 20089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 47.63
-  maximum: 359.2
-  average: 158.02
-  UpdateDay: '2022-05-10T06:30:26.852819'
+  minimum: 39.85
+  maximum: 50.1
+  average: 43.39
+  UpdateDay: '2022-05-10T09:32:05.056700'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 26702
+  Rank: 26804
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 52.83
-  maximum: 53.89
-  average: 53.43
-  UpdateDay: '2022-05-10T06:32:00.822195'
+  minimum: 48.78
+  maximum: 68.29
+  average: 57.66
+  UpdateDay: '2022-05-10T09:30:48.790235'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 24188
+  Rank: 24279
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
-  port: 443
   type: trojan
-  country: "\U0001F1F9\U0001F1FC TW"
+  country: "\U0001F1F9\U0001F1FCTW"
+  port: 443
   password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 74.79
-  maximum: 87.3
-  average: 82.85
-  UpdateDay: '2022-05-10T06:32:00.932175'
+  minimum: 75.96
+  maximum: 94.22
+  average: 85.36
+  UpdateDay: '2022-05-10T09:30:48.927559'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 21049
+  Rank: 21096
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
-  type: trojan
-  country: "\U0001F1ED\U0001F1F0HK"
   port: 443
+  type: trojan
+  country: "\U0001F1ED\U0001F1F0 HK"
   password: L1qNeGrY58ApwrRA
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.81
-  maximum: 47.33
-  average: 44.57
-  UpdateDay: '2022-05-10T06:30:30.002162'
+  minimum: 38.52
+  maximum: 46.81
+  average: 41.29
+  UpdateDay: '2022-05-10T09:32:05.114264'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 20340
+  Rank: 20442
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -189,7 +189,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 18999
+  Rank: 19099
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -204,22 +204,22 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 18990
+  Rank: 19015
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 121.74
-  maximum: 1132.17
-  average: 458.85
-  UpdateDay: '2022-05-10T06:31:25.347615'
+  minimum: 1261.17
+  maximum: 2274.05
+  average: 1932.22
+  UpdateDay: '2022-05-10T09:32:11.069380'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 18459
+  Rank: 18525
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -231,7 +231,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 17429
+  Rank: 17493
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -246,22 +246,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 16940
+  Rank: 17035
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: UiLPqefVfielqkDjEwBV
+  password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.91
-  maximum: 49.59
-  average: 42.87
-  UpdateDay: '2022-05-10T06:32:00.768550'
+  minimum: 38.92
+  maximum: 42.15
+  average: 40.25
+  UpdateDay: '2022-05-10T09:32:05.044613'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 15706
+  Rank: 15732
 - alterId: 0
   cipher: auto
   http-opts:
@@ -286,22 +286,22 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 15013
+  Rank: 15063
 - name: tky3.ssgnode.ga:443@trojan
   server: tky3.ssgnode.ga
   port: 443
   type: trojan
   country: "\U0001F1EF\U0001F1F5 JP"
-  password: 82a115db-6e59-4319-9730-8f5638908d59YWVzLTI1Ni1nY2023115_5a451f03
+  password: 82a115db-6e59-4319-973lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-1239d0255272
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 41.59
-  maximum: 53.66
-  average: 45.63
-  UpdateDay: '2022-05-10T06:32:00.798461'
+  minimum: 40.8
+  maximum: 48.39
+  average: 43.96
+  UpdateDay: '2022-05-10T09:32:05.137025'
   PFirstFoundDay: '2022-05-04T12:30:31.831423'
-  Rank: 14119
+  Rank: 14218
 - name: zgao.shop:443@trojan
   server: zgao.shop
   port: 443
@@ -316,22 +316,22 @@ proxies:
   average: 77.06
   UpdateDay: '2022-03-19T00:36:45.832218'
   PFirstFoundDay: '2022-03-19T00:36:45.832222'
-  Rank: 14028
+  Rank: 14099
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
   type: trojan
   country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
+  password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.66
-  maximum: 39.7
-  average: 39.69
-  UpdateDay: '2022-05-10T06:32:00.766154'
+  minimum: 39.96
+  maximum: 47.26
+  average: 42.46
+  UpdateDay: '2022-05-10T09:32:05.119398'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 13853
+  Rank: 13928
 proxy-groups:
 - name: PG-default
   type: fallback
